# NovelForge

./: .gitattributes  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  release.yml
docs/: FULLSTACK_DESKTOP_DEVELOPMENT_GUIDE.md  RELEASING.md
python-agent/: agent.py  app.py  database.py  memory.py  models.py  prompts.py  requirements.txt  tools.py
python-agent/tests/: chat_generation_acceptance.py  douluo_harem_production.py  e2e_paper_actions.py  e2e_workflow.py  long_material_acceptance.py  production_acceptance.py  test_batch_autocollect.py  test_core.py  test_delivery_e2e.py  test_refactor.py  test_scenario_tools.py  test_security.py  test_user_scenarios.py
scripts/: build-agent.ps1  check-release-version.ps1  test-windows-installers.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
web-frontend/: index.html  package.json
web-frontend/src/: App.tsx  index.css  types.ts
web-frontend/src/api/: client.ts
web-frontend/src/components/: BranchManager.tsx  CenterPanel.tsx  CrossBridge.tsx  ExportDialog.tsx  FactTable.tsx  FeatureGuideCard.tsx  ImpactVisualization.tsx  InspirationGenerator.tsx  LeftPanel.tsx  MaterialNode.tsx  ModeSelector.tsx  ProjectSettings.tsx  RightPanel.tsx  SettingsDialog.tsx  StoryStructure.tsx  StyleTrial.tsx  UniverseRules.tsx
web-frontend/src/stores/: chapterStore.ts  chatStore.ts  materialStore.ts  modeStore.ts  sessionStore.ts
